5.1.x/sidebar.md
---
layout: null
---

* [Planning](#planning)
    *   [Architecture](/$version/planning/Architecture.html)
    *   [Getting Started](/$version/planning/Getting-Started.html)
    *   [Security Guide](/$version/planning/Security-Guide.html)
    *   [Upgrade Guide](/$version/planning/Upgrade-Guide.html)
    *   [Release Policy](/cas/developer/Release-Policy.html)
    *   [Maintenance Policy](/cas/developer/Maintenance-Policy.html)

* [Installation](#casinstallation)
    *   [Requirements](/$version/planning/Installation-Requirements.html)
    *   [WAR Overlays](/$version/installation/Maven-Overlay-Installation.html)
    *   [Docker Deployment](/$version/installation/Docker-Installation.html)
    *   [Servlet Containers](/$version/installation/Configuring-Servlet-Container.html)
    *   [Troubleshooting Guide](/$version/installation/Troubleshooting-Guide.html)

* [Configuration](#casconfigmgmt)
    *   [Overview](/$version/installation/Configuration-Management.html)
    *   [Configuration Server](/$version/installation/Configuration-Server-Management.html)
    *   [Properties & Settings](/$version/installation/Configuration-Properties.html)
    *   [Configuration Security](/$version/installation/Configuration-Properties-Security.html)
    *   [Configuration Extensions](/$version/installation/Configuration-Management-Extensions.html)
    *   [Reloading Changes](/$version/installation/Configuration-Management-Reload.html)
    *   [Clustered Deployments](/$version/installation/Configuration-Management-Clustered.html)

* [Authentication](#casauthentication)
    *   [Overview](/$version/installation/Configuring-Authentication-Components.html)
    *   [Methods](#authnmethods)
        *   [LDAP](/$version/installation/LDAP-Authentication.html)
            *   [Password Policy](/$version/installation/Password-Policy-Enforcement.html)
        *   [Database](/$version/installation/Database-Authentication.html)
            *   [Password Policy](/$version/installation/Password-Policy-Enforcement.html)
        *   [JAAS](/$version/installation/JAAS-Authentication.html)
        *   [X.509](/$version/installation/X509-Authentication.html)
        *   [RADIUS](/$version/installation/RADIUS-Authentication.html)
        *   [SPNEGO](/$version/installation/SPNEGO-Authentication.html)
        *   [Remote Address](/$version/installation/Remote-Address-Authentication.html)
        *   [Trusted](/$version/installation/Trusted-Authentication.html)
        *   [JWT](/$version/installation/JWT-Authentication.html)
        *   [Rest](/$version/installation/Rest-Authentication.html)
        *   [Stormpath](/$version/installation/Stormpath-Authentication.html)
        *   [Basic](/$version/installation/Basic-Authentication.html)
        *   [Digest](/$version/installation/Digest-Authentication.html)
        *   [Apache Shiro](/$version/installation/Shiro-Authentication.html)
        *   [MongoDb](/$version/installation/MongoDb-Authentication.html)
        *   [Pac4J](/$version/installation/Pac4j-Authentication.html)
        *   [Whitelist](/$version/installation/Whitelist-Authentication.html)
        *   [Blacklist](/$version/installation/Blacklist-Authentication.html)
        *   [Custom](/$version/installation/Configuring-Custom-Authentication.html)
    *   [Delegation](/$version/integration/Delegate-Authentication.html)
        *   [ADFS](/$version/integration/ADFS-Integration.html)
    *   [Throttling](/$version/installation/Configuring-Authentication-Throttling.html)
    *   [Proxying](/$version/installation/Configuring-Proxy-Authentication.html)
    *   [Events](/$version/installation/Configuring-Authentication-Events.html)
    *   [Surrogate](/$version/installation/Surrogate-Authentication.html)
    *   [ClearPass](/$version/integration/ClearPass.html)
    
* [Attributes](#casattributes)
    *   [Attribute Resolution](/$version/integration/Attribute-Resolution.html)
    *   [Attribute Release](/$version/integration/Attribute-Release.html)
        *   [Principal Id](/$version/integration/Attribute-Release-PrincipalId.html)
        *   [Release Policies](/$version/integration/Attribute-Release-Policies.html)
        *   [Value Filters](/$version/integration/Attribute-Value-Release-Policies.html)
        *   [Consent](/$version/integration/Attribute-Release-Consent.html)
        *   [Caching](/$version/integration/Attribute-Release-Caching.html)
        
*   [Multifactor Authentication](#mfaauthn)
    *   [Overview](/$version/installation/Configuring-Multifactor-Authentication.html)
    *   [Providers](#mfaproviders)
        *   [Duo Security](/$version/installation/DuoSecurity-Authentication.html)
        *   [YubiKey](/$version/installation/YubiKey-Authentication.html)
        *   [RSA/Radius](/$version/installation/RADIUS-Authentication.html)
        *   [Google Authenticator](/$version/installation/GoogleAuthenticator-Authentication.html)
        *   [Authy](/$version/installation/AuthyAuthenticator-Authentication.html)
        *   [Microsoft Azure](/$version/installation/MicrosoftAzure-Authentication.html)
        *   [FIDO U2F](/$version/installation/FIDO-U2F-Authentication.html)
        *   [Custom](/$version/installation/Custom-MFA-Authentication.html)
    *   [Triggers](/$version/installation/Configuring-Multifactor-Authentication-Triggers.html)
    *   [Trusted Devices](/$version/installation/Multifactor-TrustedDevice-Authentication.html)
    *   [Adaptive](/$version/installation/Configuring-Adaptive-Authentication.html)
    *   [GUA](/$version/installation/GUA-Authentication.html)
    
*   [SSO & SLO](#ssoandslo) 
    *   [SSO Session](/$version/installation/Configuring-SSO-Session-Cookie.html)
    *   [Remember Me](/$version/installation/Configuring-LongTerm-Authentication.html)
    *   [Logout & SLO](/$version/installation/Logout-Single-Signout.html)

*   [Password Management](#pswmgmt)
    *   [Overview](/$version/installation/Password-Management.html) 

* [Ticketing](#ticketingconfig)
    *   [Overview](/$version/installation/Configuring-Ticketing-Components.html)
    *   [Expiration Policies](/$version/installation/Configuring-Ticket-Expiration-Policy.html)
    *   [Storage](#ticketingstorage)
        *   [Hazelcast](/$version/installation/Hazelcast-Ticket-Registry.html)
        *   [Ehcache](/$version/installation/Ehcache-Ticket-Registry.html)
        *   [Memcached](/$version/installation/Memcached-Ticket-Registry.html)
        *   [JPA](/$version/installation/JPA-Ticket-Registry.html)
        *   [Ignite](/$version/installation/Ignite-Ticket-Registry.html)
        *   [Couchbase](/$version/installation/Couchbase-Ticket-Registry.html)
        *   [Infinispan](/$version/installation/Infinispan-Ticket-Registry.html)
        *   [Redis](/$version/installation/Redis-Ticket-Registry.html)
        *   [MongoDb](/$version/installation/MongoDb-Ticket-Registry.html)
        *   [DynamoDb](/$version/installation/DynamoDb-Ticket-Registry.html)

* [Services](#service_management)
    *   [Overview](/$version/installation/Service-Management.html)
    *   [Management Webapp](/$version/installation/Installing-ServicesMgmt-Webapp.html)
    *   [Access Strategy](/$version/installation/Configuring-Service-Access-Strategy.html)
    *   [Proxy Policy](/$version/installation/Configuring-Service-Proxy-Policy.html)
    *   [Custom Properties](/$version/installation/Configuring-Service-Custom-Properties.html)
    *   [Storage](#persistencesvcreg)
        *   [InMemory XML](/$version/installation/InMemory-Service-Management.html)
        *   [JSON](/$version/installation/JSON-Service-Management.html)
        *   [YAML](/$version/installation/YAML-Service-Management.html)
        *   [Mongo](/$version/installation/Mongo-Service-Management.html)
        *   [LDAP](/$version/installation/LDAP-Service-Management.html)
        *   [JPA](/$version/installation/JPA-Service-Management.html)
        *   [DynamoDb](/$version/installation/DynamoDb-Service-Management.html)
        *   [Couchbase](/$version/installation/Couchbase-Service-Management.html)

* [Logs & Audits](#logs_audits)
    *   [Logging](/$version/installation/Logging.html)
    *   [Audits](/$version/installation/Audits.html)
    
* [Monitoring & Statistics](#monitoroverview)
    *   [Overview](/$version/installation/Monitoring-Statistics.html) 
    *   [Administration Server](/$version/installation/Configuring-Monitoring-Administration.html)
    *   [Metrics](/$version/installation/Configuring-Metrics.html)
    *   [Monitors](/$version/installation/Configuring-Monitoring.html)
    *   [Sentry](/$version/integration/Sentry-Integration.html)
        
* [User Interface](#user_interface)
    *   [Overview](/$version/installation/User-Interface-Customization.html)
        *   [CSS & JavaScript](/$version/installation/User-Interface-Customization-CSSJS.html)
        *   [Views](/$version/installation/User-Interface-Customization-Views.html)
        *   [Localization](/$version/installation/User-Interface-Customization-Localization.html)
        *   [Dynamic Themes](/$version/installation/User-Interface-Customization-Themes.html)
    *   [Acceptable Usage Policy](/$version/installation/Webflow-Customization-AUP.html)
        
*   [Webflow Management](#webflowmgmt)
    *   [Overview](/$version/installation/Webflow-Customization.html) 
    *   [Error Handling](/$version/installation/Webflow-Customization-Exceptions.html)
    *   [Extending Webflow](/$version/installation/Webflow-Customization-Extensions.html) 
    *   [Session Persistence](/$version/installation/Webflow-Customization-Sessions.html)

* [High Availability](#highavailability)
    *   [Overview](/$version/planning/High-Availability-Guide.html)
    *   [Performance Testing](/$version/planning/High-Availability-Performance-Testing.html)
    *   [Service Discovery](/$version/installation/Service-Discovery-Guide.html)
    
* [Protocols](#protocols)
    *   [Overview](/$version/protocol/Protocol-Overview.html)
    *   [CAS](/$version/protocol/CAS-Protocol.html)
    *   [OpenID](/$version/protocol/OpenID-Protocol.html)
    *   [OAuth](/$version/protocol/OAuth-Protocol.html)
    *   [OpenID Connect](/$version/protocol/OIDC-Protocol.html)
    *   [WS-Federation](/$version/protocol/WS-Federation-Protocol.html)
    *   [SAML](#samlprotocol)
        *   [SAML1](/$version/protocol/SAML-Protocol.html)
        *   [SAML2](/$version/installation/Configuring-SAML2-Authentication.html)
    *   [REST](/$version/protocol/REST-Protocol.html)

* [Integration](#appintegration)
    *   [SAML2 Service Providers](/$version/integration/Configuring-SAML-SP-Integrations.html)
        *   [Google Apps](/$version/integration/Google-Apps-Integration.html)
    *   [Google reCAPTCHA](/$version/integration/Configuring-Google-reCAPTCHA.html)
    *   [Google Analytics](/$version/integration/Configuring-Google-Analytics.html)
    *   [SCIM Provisioning](/$version/integration/SCIM-Integration.html)
    *   [CAS Clients](/$version/integration/CAS-Clients.html)
    *   [Groovy Shell](/$version/installation/Configuring-Groovy-Console.html)
    *   [Shibboleth Identity Provider](/$version/integration/Shibboleth.html)

* [Developer](#developer)
    *   [Javadocs](http://www.javadoc.io/doc/org.apereo.cas/cas-server)
    *   [Issue Tracker](https://github.com/apereo/cas/issues)
    *   [Security Vulnerability Response](/cas/developer/Sec-Vuln-Response.html)
    *   [PMC](/cas/developer/Project-Commitee.html)
    *   [Contributor Guidelines](/cas/developer/Contributor-Guidelines.html)
    *   [Code Conventions](/cas/developer/Code-Conventions.html)
    *   [Release Process](/cas/developer/Release-Process.html)
    *   [Build Process](/cas/developer/Build-Process.html)
